2008-02-28  A. Walton  <awalton@svn.gnome.org>

	* daemon/Makefile.am:
	Really disable FTP if we don't HAVE_HTTP.

2008-02-28  A. Walton  <awalton@svn.gnome.org>

	* daemon/gvfsbackendnetwork.c: (recompute_files):
	Fixup DNS-SD exposed links to actually link to the service provided.

2008-02-28  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c (g_vfs_backend_dav_init): 
	Mark the dav backend as user visible.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_create),
	(ftp_connection_login), (ftp_connection_use), (ftp_connection_new):
	split out login code, so we can try multiple auths when some fail.

2008-02-28  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsdaemonutils.c: (gvfs_file_info_populate_default),
	(gvfs_file_info_populate_names),
	(gvfs_file_info_populate_content_types):
	* daemon/gvfsdaemonutils.h:
	add functions that are supposed to set default values on a remote file
	info structure, so we don't duplicate the code across multiple
	backends.

	* daemon/gvfsbackendftp.c: (ftp_error_set_from_response),
	(ftp_connection_new), (file_info_get_flags), (file_info_query):
	use it.

2008-02-28  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
        (mount_added):
        (mount_removed):
	Emit signals outside of the lock to avoid
	deadlocks (#519250)

2008-02-28  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb):
	Fix the content-type of directories (inode/directory, not
	x-directory/normal as in gnome-vfs)
	Set file icons from the content-type

	* daemon/gvfsbackendobexftp.c (_change_directory):
	Add a FIXME, trying to change to a non-existant directory
	errors out with "permission denied", which isn't the case

	(_query_file_info_helper): set the right content-type and icon
	for the root folder

	(is_connected), (do_mount): Wait until we're connected to exit from
	do_mount()
